--- a/caddy/caddy/Caddyfile
+++ b/caddy/caddy/Caddyfile
@@ -1,5 +1,6 @@
 mirror.jingk.ai :80, :443 {
-    file_server browse {
+    file_server {
+        browse /etc/caddy/template.html
         root          /var/www/mirror
     }
 }
