fixed rsyncd conf, running tests with likang

--- a/rsyncd/config/rsyncd.conf
+++ b/rsyncd/config/rsyncd.conf
@@ -4,11 +4,25 @@ log file = /log/rsyncd.log
 port = 873
 motd file = /config/motd
 
-[files]
-path = /data
-uid = nobody
-gid = nobody
-comment = mirror.jingk.ai
+[archlinux]
+path = /data/archlinux
+comment = Arch Linux (https://archlinux.org)
+read only = true
+timeout = 300
+refuse options = c delete
+max connections = 50
+
+[rocky]
+path = /data/rocky
+comment = Rocky Linux (https://rockylinux.org) Full mirror
+read only = true
+timeout = 300
+refuse options = c delete
+max connections = 50
+
+[alpine]
+path = /data/alpine
+comment = Alpine Linux (https://alpinelinux.org)
 read only = true
 timeout = 300
 refuse options = c delete
