rsyncd seems ok, confirmed by kenny/likang

--- a/rsyncd/config/rsyncd.conf
+++ b/rsyncd/config/rsyncd.conf
@@ -22,7 +22,7 @@ max connections = 50
 
 [alpine]
 path = /data/alpine
-comment = Alpine Linux (https://alpinelinux.org)
+comment = Alpine Linux (https://alpinelinux.org) Alpine Mirror
 read only = true
 timeout = 300
 refuse options = c delete
