--- a/rsyncd/config/rsyncd.conf
+++ b/rsyncd/config/rsyncd.conf
@@ -6,7 +6,7 @@ motd file = /config/motd
 
 [archlinux]
 path = /data/archlinux
-comment = Arch Linux (https://archlinux.org)
+comment = Arch Linux (https://archlinux.org) Full Mirror
 read only = true
 timeout = 300
 refuse options = c delete
@@ -22,7 +22,15 @@ max connections = 50
 
 [alpine]
 path = /data/alpine
-comment = Alpine Linux (https://alpinelinux.org) Alpine Mirror
+comment = Alpine Linux (https://alpinelinux.org) Full Mirror
+read only = true
+timeout = 300
+refuse options = c delete
+max connections = 50
+
+[endeavouros]
+path = /data/endeavouros
+comment = EndeavourOS (https://endeavouros.com/) Full Mirror
 read only = true
 timeout = 300
 refuse options = c delete
