Added arcolinux, fixes #12
Signed-off-by: xlanor <contact@jingk.ai>

--- a/rsyncd/config/rsyncd.conf
+++ b/rsyncd/config/rsyncd.conf
@@ -36,6 +36,14 @@ timeout = 300
 refuse options = c delete
 max connections = 50
 
+[arcolinux]
+path = /data/arcolinux
+comment = ArcoLinux (https://arcolinux.com/) Full Mirror
+read only = true
+timeout = 300
+refuse options = c delete
+max connections = 50
+
 [endeavouros]
 path = /data/endeavouros
 comment = EndeavourOS (https://endeavouros.com/) Full Mirror
