fix: updated to remove invalid upstreams...
Signed-off-by: xlanor <contact@jingk.ai>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: rsync-cron-ubuntu
     restart: always
     volumes:
+        - ./log:/var/log
         - /mnt/nas/mirror:/mnt/mirror/
     networks:
     - homenetwork
